Make track association snapshots deterministic